--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -6,6 +6,11 @@
 </video>
 
 
-
+<ul>
+  <% @items.each do |i| %>
+    <li><%= i.name %></li>
+    <li><%= i.description %></li>
+  <% end %>
+</ul>
 
 
