--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -10,6 +10,7 @@
   <% @items.each do |i| %>
     <li><%= i.name %></li>
     <li><%= i.description %></li>
+    <li><%= i.price %></li>
   <% end %>
 </ul>
 
