--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -6,13 +6,16 @@
 </video>
 
 
-<ul class="nolist">
-  <% @items.each do |i| %>
-    <li><%= i.name %></li>
-    <li><%= i.description %></li>
-    <li><%= image_tag i.image unless i.image.nil? %></li>
-    <li><%= i.price %></li>
-  <% end %>
-</ul>
 
+<% @items.each do |i| %>
+  <div class="card" style="width: 18rem;">
+    <%= image_tag i.image unless i.image.nil?  %>
+    <div class="card-body">
+      <h5 class="card-title"><%= i.name %></h5>
+      <p class="card-text"><%= i.description %></p>
+      <p class="card-text"><%= i.price %></p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+<% end %>
 
