--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,17 +5,8 @@
   <source src="/videos/avo-egg.mp4" type="video/mp4"/>
 </video>
 
+<hr />
 
-
-<% @items.each do |i| %>
-  <div class="card" style="width: 18rem;">
-    <%= image_tag i.image unless i.image.nil?  %>
-    <div class="card-body">
-      <h5 class="card-title"><%= i.name %></h5>
-      <p class="card-text"><%= i.description %></p>
-      <p class="card-text"><%= i.price %></p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-<% end %>
-
+<div class="row menu">
+  <%= render 'shared/menu' %>
+</div>  
